# OpenMOTION-Pylib

./: .gitignore  HistoFPGAFw.bit  HistoFPGAFw_impl1.bit  HistoFPGAFw_impl1_agg.bit  HistoFPGAFw_impl1_rc.bit  README.md  TestCustom_impl1.bit  basic.py  brad_analysis.py  camera_config_partial.csv  camera_off.py  camera_on.py  cli_callbacks.py  comm_test.py  count-reps.py  display_histos.py  flash_camera.py  histogram.csv  i2c_test.py  monitor.py  move.bat  multicam_setup.py  multicam_stream.py  multicam_stream_x2.py  openmotion-cli.py  parse_data.py  parse_data_v2.py  plot_camera.bat  plot_histos.py  pyproject.toml  pyusb_send_setup_req.py  pywinusb_test1.py  read_temperature.py  requirements.txt  sbom.cdx.json  scan_Test_20250806_175313_left_mask11.csv  scan_Test_20250806_175313_right_mask11.csv  test.bit  test_cam.bit  test_camera.bat  (+5 more)
.github/workflows/: hardware-tests-full.yml  hardware-tests.yml  publish-pypi.yml  release-build.yml
archive/: agg_v2_test.py  brad_analysis2.py  camera_data.csv  flash_camera.py  histo_data.csv  memdump.txt  monitor copy.py  multicam_setup.py  multicam_stream.py  openmotion-cli.py  plot_histo.py  plot_histos_from_struct.py  plot_image.py  plot_image_bmp.py  processing_tests.py  serial_benchmark.py  test_receive_multi_frame_console.py  uvc_test.py  uvc_test2.py  uvc_test3.py  uvc_test4.py  uvc_test5.py  uvc_test6.py  uvc_test7.py
bitstream/: bit_to_header.c  testcustom_agg.bit
data-processing/: analyze_camera_analytics.py  check_csv.py  compare_pipelines.py  parse_data.py  parse_data_v2.py  plot_all_histo_average.py  plot_all_histograms_old.py  plot_all_spectrogram.py  plot_all_spectrogram_old.py  plot_corrected_scan.py  plot_histo_average.py  plot_histo_average_old.py  plot_single_histogram.py  plot_single_histogram_old.py  plot_single_spectrogram.py  plot_single_spectrogram_old.py  plot_test_data.py  saleae_data_parser.py
data_captures/: dark_histo_data_352_1.csv  dark_histo_data_352_16.csv  dark_histo_data_352_2.csv  dark_histo_data_352_4.csv  dark_histo_data_352_8.csv
docs/: Architecture.md  CameraArrangement.md  ConsoleTelemetry.md  MOTION_Console_API.md  MOTION_Interface_API.md  MOTION_Sensor_API.md  Omnivision Camera Register Map v2.xlsx  PipelineComparison.md  SciencePipeline.md  TestPlan.md  scan-sequencing.md
docs/superpowers/plans/: 2026-04-20-contact-quality-rehash.md
docs/superpowers/specs/: 2026-04-20-contact-quality-rehash-design.md  2026-04-21-connect-disconnect-redesign-design.md  (+2 more)
drivers/: README.md
drivers/linux/: 99-openmotion.rules  install.sh
drivers/macos/: README.txt
drivers/windows/: install.bat  openmotion-sensor-if0.inf  openmotion-sensor-if1.inf  openmotion-sensor-if2.inf
omotion/: Calibration.py  CalibrationWorkflow.py  CommInterface.py  CommandError.py  Console.py  ConsoleTelemetry.py  ContactQuality.py  DFUProgrammer.py  DualMotionComposite.py  FPGAProgrammer.py  GitHubReleases.py  HistoFPGAFw_impl1.bit  Interface.py  MotionBulkBase.py  MotionBulkCommand.py  MotionComposite.py  MotionConfig.py  MotionConsole.py  MotionInterface.py  MotionProcessing.py  MotionSensor.py  MotionSensorModule.py  MotionSignal.py  MotionUart.py  ScanWorkflow.py  Sensor.py  StreamInterface.py  USBInterfaceBase.py  UartPacket.py  __init__.py  async_serial.py  config.py  connection_state.py  core.py  ctrl_if.py  histo_display.py  i2c_data_packet.py  i2c_packet.py  i2c_status_packet.py  jedecParser.py  (+3 more)
omotion/dfu-util/: AUTHORS  ChangeLog  README  README-bin.txt  dfuse-pack.py  lsusb_build_on_mingw.patch
scripts/: camera_off.py  camera_tester.py  capture_data.py  comm_test.py  comms_stress_test.py  demo.py  disable_camera_power.py  enable_camera_power.py  enter_dfu.py  flash_sensors.py  get_temperature.py  i2c_test.py  plot_telemetry.py  plot_test_data.py  reset_fpga.py  run_pipeline_csv_tests.py  set_trigger_laser.py  soft_reset_console.py  test.py  test_bulk.py  test_bulk_camera.py  test_bulk_histo.py  test_bulk_imu.py  test_camera_power_status.py  test_camera_sensors.py  test_comms.py  test_connection.py  test_console_dfu.py  test_console_if.py  test_console_messages.py  test_console_pgm_fpga.py  test_console_program.py  test_console_trigger.py  test_fan_control.py  test_firmware_update.py  test_fixture.py  test_fpga_if.py  test_fsync.py  test_get_console_fw.py  test_get_sensor_fw.py  (+15 more)
stream-db/: README.md  db_browser.py  db_validator.py  importer.py  sensor_module_simulator.py
tests/: PIPELINE_TESTS.md  conftest.py  run_tests.bat  test_calibration.py  test_calibration_console.py  test_calibration_procedure.py  test_calibration_workflow.py  test_calibration_workflow_compute.py  test_comm_paths.py  test_console.py  test_console_telemetry_unit.py  test_contact_quality.py  test_corrected_csv_output.py  test_dark_frame_callback.py  test_dfu_path.py  test_errors.py  test_pipeline_csv.py  test_pipeline_perf.py  test_reduced_mode.py  test_rolling_average.py  test_sensor.py  test_sequences.py  test_wheel_dfu.py  test_zz_dfu.py
tests/fixtures/: both_sides_left.csv  corrected_output_check.csv  frame_id_rollover_left.csv  generate_fixtures.py  multi_cam_left.csv  multi_interval_left.csv
tests/hardware/: README.md
winusb-driver/: COMMS_HISTO_IMU(HS)_(Interface_0).inf  COMMS_HISTO_IMU(HS)_(Interface_1).inf  COMMS_HISTO_IMU(HS)_(Interface_2).inf  OpenMotionDriver-x64.msi  OpenMotion_signing_cert.cer  OpenMotion_signing_cert.pfx  Product.wxs  cab1.cab  comms_histo_imu(hs)_(interface_0).cat  comms_histo_imu(hs)_(interface_1).cat  comms_histo_imu(hs)_(interface_2).cat  driver_install.cmd
(+3 files in other folders)
