[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmotion-pylib"
version = "1.3.3"
description = "Python library to communicate with STM32 for loading FPGA and camera sensors (OpenMOTION)."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
authors = [{ name = "OpenwaterHealth", email = "george@openwater.health" }]

dependencies = [
  "pyserial>=3.5",
  "crcmod>=1.7",
  "numpy~=2.2",
  "matplotlib~=3.10",
  "pyusb>=1.3.1",
  "libusb1>=3.3.1",
  "keyboard>=0.13.5",
]

[project.urls]
Repository = "https://github.com/OpenwaterHealth/OpenMOTION-Pylib"
Issues     = "https://github.com/OpenwaterHealth/OpenMOTION-Pylib/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["omotion"]          # exact package name; no wildcard

# Include data files inside packages
[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# tighten these if distribution size becomes large
"*" = ["**/*.bin", "**/*.json", "**/*.cfg", "**/*.txt"]

# Classifiers/keywords for PyPI
[project.classifiers]
# Minimal examples; add more as appropriate
"Development Status :: 4 - Beta",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.12",
"License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
"Operating System :: OS Independent"

[project.keywords]
"stm32", "fpga", "camera", "usb", "serial", "openmotion"
