[build-system]
requires = ["setuptools>=77.0", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "openmotion-pylib"
dynamic = ["version"]
description = "Python library to communicate with STM32 for loading FPGA and camera sensors (OpenMOTION)."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "OpenwaterHealth", email = "george@openwater.health" }]

dependencies = [
  "pyserial>=3.5",
  "crcmod>=1.7",
  "numpy>=2.0,<3",
  "matplotlib>=3.8,<4",
  "pyusb>=1.3.1",
  "libusb1>=3.3.1",
  "requests>=2.32.5",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent"
]
keywords = ["stm32", "fpga", "camera", "usb", "serial", "openmotion"]

[project.optional-dependencies]
keyboard = ["keyboard>=0.13.5"]

[project.urls]
Repository = "https://github.com/OpenwaterHealth/OpenMOTION-Pylib"
Issues     = "https://github.com/OpenwaterHealth/OpenMOTION-Pylib/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["omotion"]
namespaces = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["**/*.bin", "**/*.json", "**/*.cfg", "**/*.txt", "**/*.dll"]
"omotion" = [
    "dfu-util/**/*",
    "dfu-util/**/dfu-util",
    "dfu-util/**/dfu-util.exe",
    "dfu-util/**/*.exe",
    "dfu-util/**/*.dll",
    "dfu-util/**/*.dylib",
    "dfu-util/**/*.a",
    "dfu-util/**/*.la",
]

[tool.setuptools_scm]
# Uses tags like v1.2.3 or 1.2.3  ->  1.2.3
tag_regex = "^v?(?P<version>\\d+\\.\\d+\\.\\d+)$"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
